# Torch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/torch-app/: Cargo.toml  tauri.conf.json
crates/torch-app/icons/: icon.icns
crates/torch-app/src/: db.rs  lib.rs  main.rs
crates/torch-cli/: Cargo.toml
crates/torch-cli/src/: main.rs
crates/torch-core/: Cargo.toml
crates/torch-core/src/: claude.rs  lib.rs  orchestrator.rs  pipeline.rs  stream.rs  templates.rs
crates/torch-core/tests/: engine.rs
docs/: ipc-contract.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.module.css  App.tsx
ui/src/bridge/: demo.ts  index.ts  tauri.ts  types.ts
ui/src/components/: CheckpointBanner.module.css  CheckpointBanner.tsx  ControlRoom.module.css  ControlRoom.tsx  CriticCard.module.css  CriticCard.tsx  IntakePanel.module.css  IntakePanel.tsx  LoopCard.module.css  LoopCard.tsx  ModelPopover.module.css  ModelPopover.tsx  OutputPane.module.css  OutputPane.tsx  PipelineRail.module.css  PipelineRail.tsx  RunsSidebar.module.css  RunsSidebar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  StageCard.module.css  StageCard.tsx  Titlebar.module.css  Titlebar.tsx  TorchSvg.tsx  UsageFooter.module.css  UsageFooter.tsx
ui/src/store/: index.ts
ui/src/styles/: global.css  tokens.css
