[workspace]
resolver = "2"
members = ["crates/torch-core", "crates/torch-cli", "crates/torch-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CBaileyDev/Torch"
authors = ["Torch contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
