[package]
name = "torch-cli"
description = "Headless CLI front-end for the Torch pipeline engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "torch"
path = "src/main.rs"

[dependencies]
torch-core = { path = "../torch-core" }
anyhow.workspace = true
ctrlc = "3"
